# version-query

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Jenkinsfile  MANIFEST.in  NOTICE  README.rst  appveyor.yml  dev_requirements.txt  pyproject.toml  requirements.txt  requirements_ci.txt  requirements_test.txt  setup.py  setup_boilerplate.py  test_requirements.txt
.build/: install_pyenv.sh
.github/: dependabot.yml
.github/workflows/: python.yml
.travis/: install_pyenv.sh
test/: __init__.py  examples.py  git_repo_tests.py  test_cli.py  test_determine.py  test_git.py  test_local_git_version.py  test_main.py  test_packaging.py  test_query.py  test_setup.py  test_version.py  test_with_git_repo.py
version_query/: __init__.py  __main__.py  _logging.py  _version.py  caller.py  config.py  determine.py  git_query.py  git_tag.py  increment.py  local_git_version.py  main.py  parser.py  patterns.py  py_query.py  query.py  version.py
